@@ -114,6 +114,8 @@ protected:
     virtual void* DoGetItemClientData(int n) const;
     virtual void DoSetItemClientObject(int n, wxClientData* clientData);
     virtual wxClientData* DoGetItemClientObject(int n) const;
+    virtual int DoListHitTest(const wxPoint& point) const;
+
     void DoApplyWidgetStyle(GtkRcStyle *style);
 
 private:
