@@ -91,6 +91,7 @@ All (GUI):
 - Implemented wxDisplay::GetFromWindow() for platforms other than MSW.
 - UpdateUI handler can now show/hide the window too (Ronald Weiss)
 - More than one filter allowed in in wxDocTemplate filter.
+- Added wxListBox::HitTest()
 
 wxMSW:
 
